[package]
name = "test002"
version = "0.1.0"
edition = "2021"


[dependencies]
configparser="*"
flume = "*"
lazy_static="*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
bytes = "1"

[dependencies.tokio]
version = "1.19.2"
default-features = false
features = ["rt","rt-multi-thread","macros","net"]
